[build-system]
requires      = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpl-markers"
version = "0.0.18"
description = "interactive data markers for matplotlib"
readme = "README.md"
authors = [{ name = "Rick Lyon", email = "rlyon14@gmail.com" }]
license = "MIT"
license-files = ["LICENSE.txt"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["matplotlib", "markers", "interactive"]
dependencies = [
    "matplotlib>=3.9.0",
    "numpy",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "black", 
    "flake8", 
    "pytest", 
    "bumpversion", 
    "parameterized", 
    "pyqt5", 
    "ipykernel",
    "ipympl"
]

[tool.setuptools.packages.find]
include = ["mpl_markers"]

[project.urls]
repository = "https://github.com/ricklyon/mpl_markers"
